# Injectables

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
docs/: injectables.ai
examples/: example_basic_usage.rs  example_generics_injection.rs  example_multiple_injection_and_visibility.rs  example_nested_injection.rs
src/: error.rs  lib.rs  registry.rs  types.rs  visibility.rs
tests/: compilation_test_runner.rs
tests/fail/: circular_injection.rs  circular_injection.stderr  conflicting_generics.rs  conflicting_generics.stderr  duplicate_properties.rs  duplicate_properties.stderr  enum_injection.rs  enum_injection.stderr  illegal_privacy_access.rs  illegal_privacy_access.stderr  injection_into_enum.rs  injection_into_enum.stderr  invalid_visibility_restriction.rs  invalid_visibility_restriction.stderr  nonexistent_struct.rs  nonexistent_struct.stderr  private_field_conflict.rs  private_field_conflict.stderr  recursive_injection.rs  recursive_injection.stderr
tests/pass/: basic_struct_injection.rs  deep_nested_injection.rs  generic_struct_multiple_params_injection.rs  multiple_struct_injections.rs  nested_generic_injection.rs  visibility.rs
